# energy-market-delta-lake

./: .envrc  .gitignore  .gitleaksignore  .ignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  OPERATOR.md  README.md
@common/configurations/: README.md  pyproject.toml
@common/configurations/src/configurations/: utils.py
backend-services/ausenergymarket-api/: .gitignore  README.md  main.py  package-lock.json  pyproject.toml
backend-services/ausenergymarket-api/scripts/: get-common.sh
backend-services/ausenergymarket-api/src/ausenergymarket_api/: __init__.py  configurations.py
backend-services/ausenergymarket-api/static/css/: input.css  site.css
backend-services/ausenergymarket-api/static/js/: sidebar.js
backend-services/ausenergymarket-api/templates/: index.html  test.html
backend-services/ausenergymarket-api/templates/dashboards/: demand_forecast.html  electricity_prices.html  gas_insights.html  generation_mix.html  renewable_output.html
backend-services/ausenergymarket-api/templates/macros/: dashboard-nav-item.html
backend-services/ausenergymarket-api/templates/shared/: layout.html
backend-services/authentication/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
backend-services/authentication-service/: .ignore  Dockerfile  main.py  pyproject.toml
backend-services/authentication-service/.scratch/: start-server.sh
backend-services/authentication/tests/: conftest.py  test_main.py
backend-services/authentication/tests/component/: __init__.py  conftest.py  test_main.py
backend-services/dagster-core/: .dockerignore  Dockerfile  code-locations.aws.toml  dagster.aws.ec2-run-workers.prototype.yaml  dagster.aws.yaml  dagster.local.yaml  pyproject.toml  render_aws_workspace.py  workspace.aws.yaml  workspace.local.yaml
backend-services/dagster-etl-services/aemo-etl/: .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend-services/dagster-etl-services/aemo-etl/scripts/: activate-environment.sh  debug-dagster-docker.sh  get-common.sh  run-local-moto-server-dagster.sh  run-moto-server.sh  run-s3-dagster.sh  run-tests.sh  setup-localstack-resources.sh  start-localstack.sh  stop-localstack.sh
backend-services/dagster-etl-services/aemo-etl/tests/: conftest.py  test__utils.py  test_definitions.py  test_utils.py  utils.py
backend-services/dagster-pipeline-services/aemo-gas/: .dockerignore  .gitignore  .ignore  Dockerfile  get-common.sh  local-dagster-test.sh  local-test.sh  pyproject.toml
backend-services/dagster-pipeline-services/aemo-gas/scripts/: get-common.sh  local-dagster-with-moto-server.sh  local-dagster-with-s3-connection.sh  run-tests.sh
backend-services/dagster-user/aemo-etl/: .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dagster.dev.yaml  dagster.yaml  pyproject.toml  workspace.dev.yaml
backend-services/marimo/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend-services/marimo/docs/: dashboard-standard.md
backend-services/marimo/notebooks/: aws_bounded_read_diagnostics.py  capacity_auction.py  capacity_outlook.py  capacity_transactions.py  citation_chain_explorer.py  concept_to_asset_explorer.py  connection_point_explainer.py  dagster_asset_catalogue_status.py  data_readiness_overview.py  facility_explainer.py  facility_flow_storage.py  flow_operations.py  forecast_vs_actual.py  gas_bid_offer_stack.py  gas_customer_transfer_activity.py  gas_day_explainer.py  gas_market_prices.py  gas_quality_composition.py  gas_schedule_runs.py  gas_scheduled_quantities.py  gas_settlement_activity.py  gas_sttm_capacity_settlement.py  gas_sttm_contingency_gas.py  gas_sttm_market_settlement.py  gas_sttm_mos_allocation.py  gbb_interactive_map.py  glossary_explorer.py  head.html  heating_value_pressure.py  hub_zone_explainer.py  linepack_adequacy.py  local_table_explorer.py  materialization_freshness.py  nomination_demand_forecast.py  operational_meter_flow.py  participant_explainer.py  pipeline_connection_operations.py  s3_bucket_health.py  sample_energy_market.py  schema_data_dictionary_explorer.py  (+4 more)
backend-services/marimo/research-workspace/: AGENTS.md
backend-services/marimo/scripts/: review_promoted_dashboards.py  sync-gbb-map-s3-to-localstack.sh
backend-services/marimo/tests/: conftest.py  test_main.py
infrastructure/aws/: .gitignore  app.py  pyproject.toml
infrastructure/aws-pulumi/: .pre-commit-config.yaml  Pulumi.dev-ausenergymarket.debug.yaml  Pulumi.dev-ausenergymarket.yaml  Pulumi.yaml  README.md  __main__.py  code_locations.py  cognito_auth_flow_preflight.py  configs.py  dagster_core_deployment.py  ecs_rollouts.py  pyproject.toml
infrastructure/aws-pulumi/components/: __init__.py  bastion_host.py  caddy.py  dagster_runtime_task.py  dynamodb.py  ecr.py  ecs_cluster.py  ecs_services.py  fastapi_auth.py  iam_roles.py  marimo.py  postgres.py  postgres_settings.py  s3_buckets.py  security_groups.py  service_discovery.py  vpc.py  vpc_endpoints.py
infrastructure/aws-pulumi/docs/: README.md  connectivity.md  edge-and-access.md  identity-and-discovery.md  runtime.md  security-audit.md  storage.md  vpc.md
infrastructure/aws-pulumi/scripts/: calculate-ecs-costs  delete-dev-buckets  list-archive-prefix  redeploy-user-code  run-integration-tests  setup_secrets
infrastructure/aws/infrastructure/: bastion_host.py  buckets.py  caddy_server.py  configurations.py  fastapi_authentication_server.py  iam_roles.py  jump_server.py  locking_table.py  nginx.py  postgres.py  security_groups.py  service_discovery.py  utils.py  vpc.py
infrastructure/aws/scripts/: activate.sh  deploy.sh  destroy-dev-dagster-services.sh  destroy.sh  get-common.sh  redeploy-dev-auth-services.sh  redeploy-dev-dagster-services.sh  ssh-bastion-host.sh  ssh-caddy-server.sh  ssh-jump-server.sh
tools/gas-market-knowledge-base/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
tools/ralph-loop/: .pre-commit-config.yaml  README.md  pyproject.toml
(+3318 files in other folders)
