[project]
name = "configurations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
configurations = "configurations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
