[project]
name = "authentication-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.0",
    "fastapi[standard]>=0.115.13",
    "itsdangerous>=2.2.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
]
