[project]
name = "authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "authlib>=1.6.9",
  "fastapi[standard]>=0.135.1",
  "itsdangerous>=2.2",
  "python-jose[cryptography]>=3.5",
  "requests>=2.32.5",
  "uvicorn>=0.42",
]
