[project]
name = "authentication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "authlib>=1.6.9",
  "fastapi[standard]>=0.135.1",
  "itsdangerous>=2.2",
  "python-jose[cryptography]>=3.5",
  "requests>=2.32.5",
  "uvicorn>=0.42",
]

[dependency-groups]
dev = [
  "anyio[trio]>=4.12.1",
  "httpx>=0.28",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.8",
  "zuban>=0.6.1",
]

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "E", "F" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
lint.pycodestyle.max-line-length = 120

[tool.pytest]
ini_options.testpaths = [ "tests" ]

[tool.zuban]
strict = false
