[project]
name = "dagster-core"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dagster>=1.12.19",
  "dagster-aws>=0.28.19",
  "dagster-docker>=0.28.19",
  "dagster-graphql>=1.12.19",
  "dagster-postgres>=0.28.19",
  "dagster-webserver>=1.12.19",
]

[tool.uv]
workspace.members = [
  "scripts",
]
