[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "marimoserver"
version = "0.1.0"
description = "FastAPI server hosting marimo notebooks for the Energy Market Delta Lake analytics layer"
readme = "README.md"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "boto3>=1.42.58",
  "deltalake>=1.4.2",
  "fastapi[standard]>=0.135.1",
  "marimo>=0.13",
  "polars>=1.38.1",
  "uvicorn>=0.42",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "prek>=0.3.3",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.4",
  "zuban>=0.6.1",
]

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "C901", "D", "E", "F" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
lint.per-file-ignores."notebooks/*.py" = [ "ANN", "D" ]
lint.per-file-ignores."tests/**" = [ "D" ]
lint.pycodestyle.max-line-length = 120
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  "unit: pure or mocked tests without framework runtime or external resources",
  "component: in-process framework/runtime wiring tests",
  "integration: local external dependency tests using tools such as LocalStack or Podman",
  "deployed: opt-in tests against deployed cloud resources",
  "e2e: complete local service stack tests across subprojects",
]

[tool.zuban]
strict = true
exclude = [ "notebooks/" ]
