[project]
name = "aws-pulumi"
version = "0.1.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pulumi>=3,<4",
  "pulumi-aws>=7,<8",
  "pulumi-tls>=5.3",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "pyproject-fmt>=2.20",
  "ruff>=0.15.8",
  "zuban>=0.6.2",
]

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "E", "F", "I" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
lint.pycodestyle.max-line-length = 200

[tool.zuban]
disable_error_code = [ "operator", "attr-defined", "no-untyped-call", "no-any-return" ]
