[project]
name = "aws-pulumi"
version = "0.1.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "boto3>=1.38",
  "pulumi>=3,<4",
  "pulumi-aws>=7,<8",
  "pulumi-docker>=4.11.2",
  "pulumi-random>=4.19.2",
  "pulumi-tls>=5.3",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "pyproject-fmt>=2.20",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.8",
  "shellcheck-py>=0.11.0.1",
  "shfmt-py>=3.12.0.2",
  "zuban>=0.6.2",
]

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "D", "E", "F", "I" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
lint.per-file-ignores."__main__.py" = [ "D" ]
lint.per-file-ignores."configs.py" = [ "D" ]
lint.per-file-ignores."tests/**" = [ "ANN", "D" ]
lint.pycodestyle.max-line-length = 200
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  "unit: pure or mocked tests without framework runtime or external resources",
  "component: in-process framework/runtime wiring tests",
  "integration: local external dependency tests using tools such as LocalStack or Podman",
  "deployed: opt-in tests against deployed cloud resources",
  "e2e: complete local service stack tests across subprojects",
]

[tool.zuban]
disable_error_code = [
  "misc",
  "operator",
  "attr-defined",
  "no-untyped-call",
  "no-any-return",
  "return-value",
  "arg-type",
  "no-redef",
  "type-arg",
  "no-untyped-def",
  "import-not-found",
]
