[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "gas-market-knowledge-base"
version = "0.1.0"
description = "Repo-local Gas market knowledge base tooling scaffold"
readme = "README.md"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "boto3>=1.42.58",
  "click>=8.1",
  "deltalake>=1.4.2",
  "docling>=2.93",
  "polars>=1.38.1",
]
scripts.gas-market-kb = "gas_market_knowledge_base.cli:main"

[dependency-groups]
dev = [
  "prek>=0.3.3",
  "pytest>=9.0.2",
  "ruff>=0.15.4",
  "types-boto3[s3]>=1.42.58",
  "zuban>=0.6.1",
]

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "E", "F", "I" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
lint.per-file-ignores."tests/**" = [ "ANN", "E501" ]
lint.pycodestyle.max-line-length = 120

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  """\
  docling_adapter: real Docling adapter smoke coverage against generated PDFs; may require local or downloadable \
  Docling model artifacts\
  """,
  "unit: pure or mocked tests without framework runtime or external resources",
]

[tool.zuban]
strict = true
