[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "ralph-loop"
version = "0.1.0"
description = "Repo-local Ralph issue drain and promotion loop"
readme = "README.md"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click>=8.1",
  "typer>=0.12",
]
scripts.ralph = "ralph_loop.cli:main"

[dependency-groups]
dev = [
  "prek>=0.3.3",
  "pytest>=9.0.2",
  "ruff>=0.15.4",
  "zuban>=0.6.1",
]

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "C901", "D", "E", "F", "I" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
lint.per-file-ignores."src/ralph_loop/cli.py" = [ "ANN401", "C901", "D", "F403", "F405" ]
lint.per-file-ignores."src/ralph_loop/marimo_review_package_media.py" = [ "D" ]
lint.per-file-ignores."src/ralph_loop/review_package_media.py" = [ "D" ]
lint.per-file-ignores."src/ralph_loop/state.py" = [ "ANN401", "C901", "D", "F403", "F405" ]
lint.per-file-ignores."src/ralph_loop/workflow.py" = [ "ANN401", "C901", "D" ]
lint.per-file-ignores."tests/**" = [ "ANN", "C901", "D", "E501" ]
lint.pycodestyle.max-line-length = 200
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  "unit: pure or mocked tests without framework runtime or external resources",
]

[tool.zuban]
disable_error_code = [
  "arg-type",
  "assignment",
  "attr-defined",
  "import-not-found",
  "misc",
  "no-any-return",
  "no-untyped-call",
  "no-untyped-def",
  "operator",
  "override",
  "return-value",
  "union-attr",
  "unreachable",
  "type-arg",
  "var-annotated",
]
