[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aemo-etl"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dagster==1.12.15",
]

[dependency-groups]
dev = [
  "dagster-dg-cli",
  "dagster-webserver",
]

[tool.hatch]
build.targets.wheel.force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"
project.root_module = "aemo_etl"
project.registry_modules = [
  "aemo_etl.components.*",
]
