[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aemo-etl"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "boto3>=1.42.58",
  "dagster==1.12.15",
  "deltalake>=1.4.2",
  "pandas>=3.0.1",
  "polars>=1.38.1",
  "prek>=0.3.3",
  "pyarrow>=23.0.1",
  "types-boto3[dynamodb,s3]>=1.42.58",
]

[dependency-groups]
dev = [
  "dagster-dg-cli",
  "dagster-webserver",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-xdist>=3.8",
  "ruff>=0.15.4",
  "shellcheck-py>=0.11.0.1",
  "shfmt-py>=3.12.0.2",
  "ty>=0.0.19",
]

[tool.hatch]
build.targets.wheel.force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "E", "F" ]
lint.per-file-ignores."__init__.py" = [ "I" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]

[tool.dg]
directory_type = "project"
project.root_module = "aemo_etl"
project.registry_modules = [
  "aemo_etl.components.*",
]
