[project]
name = "aemo-gas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.26",
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "types-boto3[s3]>=1.37.26",
    "pandas>=2.2.3",
    "dagster>=1.10.7",
    "dagster-aws>=0.26.7",
    "dagster-docker>=0.26.7",
    "dagster-postgres>=0.26.7",
    "dagster-graphql>=1.10.7",
    "dagster-webserver>=1.10.7",
    "dagster-deltalake>=0.26.7",
    "dagster-deltalake-polars>=0.26.7",
    "dagster-polars>=0.26.7",
    "dagster-delta>=0.1.5",
    "dagster-delta-polars>=0.2.2",
    "configurations",
    "polars>=1.26.0",
]

[project.scripts]
aemo-gas = "aemo_gas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
include = ["src"]
enableTypeIgnoreComments = true
reportUnknownMemberType = false
reportAny = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportTypedDictNotRequiredAccess = false
reportReturnType=false
reportArgumentType=false
reportImportCycles=false
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

[tool.uv.sources]
configurations = { path = "configurations" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

