[project]
name = "aemo-gas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.37",
    "bs4>=0.0.2",
    "configurations",
    "dagster>=1.10.11",
    "dagster-aws>=0.26.11",
    "dagster-delta>=0.4.1",
    "dagster-docker>=0.26.11",
    "dagster-graphql>=1.10.11",
    "dagster-postgres>=0.26.11",
    "dagster-webserver>=1.10.11",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
    "s3fs>=0.4.2",
    "types-boto3[s3]>=1.37.37",
]

[project.scripts]
aemo-gas = "aemo_gas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
include = ["src"]
enableTypeIgnoreComments = true
reportUnknownMemberType = false
reportAny = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportTypedDictNotRequiredAccess = false
reportReturnType=false
reportArgumentType=false
reportImportCycles=false
reportExplicitAny=false
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

[tool.uv.sources]
configurations = { path = "configurations" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

