[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aemo-etl"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "boto3>=1.42.58",
  "bs4>=0.0.2",
  "cron-descriptor>=2.0.6",
  "dagster>=1.12.18",
  "dagster-aws>=0.28.15",
  "dagster-postgres>=0.28.15",
  "deltalake>=1.4.2",
  "pandas>=3.0.1",
  "polars>=1.38.1",
  "polars-hash>=0.5.6",
  "pyarrow>=23.0.1",
  "tenacity>=9.1.4",
  "types-boto3[dynamodb,s3]>=1.42.58",
  "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = [
  "dagster-dg-cli",
  "dagster-webserver",
  "debugpy>=1.8.20",
  "matplotlib>=3.10.9",
  "prek>=0.3.3",
  "pylint>=4.0.5",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
  "pytest-testmon>=2.2",
  "pytest-xdist>=3.8",
  "ruff>=0.15.4",
  "shellcheck-py>=0.11.0.1",
  "shfmt-py>=3.12.0.2",
  "zuban>=0.6.1",
]

[tool.hatch]
build.targets.wheel.force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.ruff]
line-length = 88
format.docstring-code-format = true
lint.select = [ "ANN", "D", "E", "F" ]
lint.per-file-ignores."__init__.py" = [ "I" ]
# Raw source-table modules are generated-like data definition files. TypedDict
# model specs are schema-heavy surfaces where required docstrings would mostly
# duplicate table or column metadata.
lint.per-file-ignores."src/aemo_etl/defs/raw/**/*.py" = [ "D" ]
lint.per-file-ignores."src/aemo_etl/models/**/*.py" = [ "D" ]
lint.per-file-ignores."tests/**" = [ "D" ]
lint.pycodestyle.max-line-length = 200
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [
  "unit: pure or mocked tests without framework runtime or external resources",
  "component: in-process framework/runtime wiring tests",
  "integration: local external dependency tests using tools such as LocalStack or Podman",
  "deployed: opt-in tests against deployed cloud resources",
  "e2e: complete local service stack tests across subprojects",
]

[tool.ty]
rules.invalid-argument-type = "ignore"

[tool.dg]
directory_type = "project"
project.root_module = "aemo_etl"
project.registry_modules = [
  "aemo_etl.components.*",
]

[tool.zuban]
strict = true
disable_error_code = [ "no-untyped-call" ]
